# neo

./: .gitignore  Cargo.toml  README.md  SPEC.md  demo.tape
src/: lib.rs  main.rs
src/agents/: definitions.rs  executor.rs  mod.rs  types.rs
src/api/: client.rs  mod.rs  types.rs
src/cli/: commands.rs  repl.rs
src/config/: loader.rs  mod.rs  types.rs
src/context/: manager.rs  mod.rs
src/orchestrator/: mod.rs  pipeline.rs  plan.rs
src/router/: capabilities.rs  mod.rs  selector.rs  types.rs
src/session/: manager.rs  mod.rs  types.rs
src/tools/: bash.rs  create_file.rs  edit_file.rs  git.rs  glob_tool.rs  grep.rs  mod.rs  read_file.rs
